Add beacon display

--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -1,5 +1,6 @@
 <ion-view>
     <ion-content>
-        Capture The Estimote
+        {{ beacon }}
+        <button class="button button-block button-balanced" ng-click="refresh()">Refresh</button>
     </ion-content>
 </ion-view>
