--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content>
-        <a class="button button-block button-balanced" ui-sref="game.start">Start a new game</a>
+        <a class="button button-block button-balanced" ui-sref="gameStart">Start a new game</a>
         <a class="button button-block button-balanced" ui-sref="login">Join the game</a>
     </ion-content>
 </ion-view>
