Add registration buttons

--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,6 +1,10 @@
 <ion-view>
     <ion-content>
-        <a class="button button-block button-balanced" ui-sref="gameStart">Start a new game</a>
-        <a class="button button-block button-balanced" ui-sref="login">Join the game</a>
+        <div class="row">
+            <div class="col">
+            <a class="button button-block button-balanced" ui-sref="gameStart">Start a new game</a>
+            <a class="button button-block button-balanced" ui-sref="login">Join the game</a>
+            </div>
+        </div>
     </ion-content>
 </ion-view>
