--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -3,21 +3,30 @@
         <ion-spinner class="spinner-energized" ng-if="loading"></ion-spinner>
 
         <div>
-            <div ng-if="!loading">
-                {{ beacon }}
+            <div ng-if="!loadng">
+                <h3>Beacon found</h3>
+                <ul>
+                    <li>Major id : {{ beacon.major }}</li>
+                    <li>Minor id : {{ beacon.minor }}</li>
+                    <li>Distance : {{ beacon.distance | number: 2 }} m</li>
+                </ul>
             </div>
 
             <button class="button button-balanced icon ion-refresh" ng-click="refresh()">Refresh</button>
         </div>
 
-        <div class="button-bar bar-calm">
-            <a class="button" ng-click="registerBase(1)">Team 1 base</a>
-            <a class="button" ng-click="registerBase(1)">Team 2 base</a>
-        </div>
+        <br>
 
-        <div class="button-bar bar-positive">
-            <a class="button" ng-click="registerDefender(1)">Team 1 defender</a>
-            <a class="button" ng-click="registerDefender(1)">Team 2 defender</a>
+        <div ng-if="!loading">
+            <div class="button-bar">
+                <a class="button button-positive" ng-click="registerBase('blue')">Base</a>
+                <a class="button button-assertive" ng-click="registerBase('red')">Base</a>
+            </div>
+
+            <div class="button-bar">
+                <a class="button button-positive" ng-click="registerDefender('blue')">Defender</a>
+                <a class="button button-assertive" ng-click="registerDefender('read')">Defender</a>
+            </div>
         </div>
 
         <button class="button button-block button-balanced icon-right ion-chevron-right" ng-click="refresh()">Next</button>
