--- a/www/templates/game.html
+++ b/www/templates/game.html
@@ -1,7 +1,8 @@
 <ion-view>
     <ion-content>
         <div ng-if="hasFlag">
-            <img src="img/flag.png">
+            <img src="img/flag-red.png" ng-if="!isRedTeam">
+            <img src="img/flag-blue.png" ng-if="isRedTeam">
             <p>You have the flag</p>
         </div>
         <div ng-if="!hasFlag">
