--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -3,7 +3,7 @@
         <ion-spinner class="spinner-energized" ng-if="loading"></ion-spinner>
 
         <div>
-            <div ng-if="!loadng">
+            <div ng-if="!loading">
                 <h3>Beacon found</h3>
                 <ul>
                     <li>Major id : {{ beacon.major }}</li>
