--- a/www/templates/start.html
+++ b/www/templates/start.html
@@ -25,7 +25,7 @@
 
             <div class="button-bar">
                 <a class="button button-positive" ng-click="registerDefender('blue')">Defender</a>
-                <a class="button button-assertive" ng-click="registerDefender('read')">Defender</a>
+                <a class="button button-assertive" ng-click="registerDefender('red')">Defender</a>
             </div>
         </div>
 
